--- a/Chris/aside.htm
+++ b/Chris/aside.htm
@@ -1,13 +1,13 @@
 <aside>
     <h1>
         <a href="index.htm">
-            <img src="images/logo.png" alt=""><span>W00CMS 網站管理平台</span>
+            <img src="../images/logo.png" alt=""><span>W00CMS 網站管理平台</span>
         </a>
     </h1>
     <!-- 現在網站 -->
     <div class="now_edit">
         <div class="pic">
-            <img src="images/website_preview.jpg" alt="">
+            <img src="../images/website_preview.jpg" alt="">
         </div>
         <div class="info">
             <p>
@@ -25,14 +25,14 @@
         <ul>
             <li>
                 <a href="index.htm">
-                    <img src="images/icon/icon_home.svg" alt="">
+                    <img src="../images/icon/icon_home.svg" alt="">
                     <span>Home</span>
                 </a>
             </li>
             <div class="divider">Menu</div>
              <li>
                 <a href="#">
-                    <img src="images/iot_icon/admingrp2.svg" alt="">
+                    <img src="../images/iot_icon/admingrp2.svg" alt="">
                     <span>系統管理</span>
                 </a>
                 <!-- level2 -->
@@ -71,7 +71,7 @@
             </li>
             <li>
                 <a href="#m">
-                    <img src="images/iot_icon/template.svg" alt="">
+                    <img src="../images/iot_icon/template.svg" alt="">
                     <span>網站管理</span>
                 </a>
                  <ul>
@@ -81,7 +81,7 @@
            </li>
             <li>
                 <a href="#">
-                    <img src="images/iot_icon/document.svg" alt="">
+                    <img src="../images/iot_icon/document.svg" alt="">
                     <span>資料發布</span>
                 </a>
                 <ul>
@@ -100,7 +100,7 @@
             <li>
                 <a href="#">
                     <div class="pic">
-                        <img src="images/website_preview.jpg" alt="">
+                        <img src="../images/website_preview.jpg" alt="">
                     </div>
                     <span class="info"> 區公所_01 </span>
                 </a>
@@ -108,7 +108,7 @@
             <li>
                 <a href="#">
                     <div class="pic">
-                        <img src="images/website_preview.jpg" alt="">
+                        <img src="../images/website_preview.jpg" alt="">
                     </div>
                     <span class="info"> 區公所_02 </span>
                 </a>
@@ -116,7 +116,7 @@
             <li>
                 <a href="#">
                     <div class="pic">
-                        <img src="images/website_preview.jpg" alt="">
+                        <img src="../images/website_preview.jpg" alt="">
                     </div>
                     <span class="info"> 區公所_03 </span>
                 </a>
