--- a/Chris/data_list_noTree.htm
+++ b/Chris/data_list_noTree.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="../js/html5shiv.js"></script>
     <script src="../js/respond.min.js"></script>
@@ -13,7 +13,7 @@
     <!-- hyUI css -->
     <link rel="stylesheet" href="../css/supercms.css">
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="../images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="../vendor/highlight/github-gist.css">
 </head>
@@ -274,7 +274,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">1</td>
                                                     <td>全球資訊入口網 / 消息公告 / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/01.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/01.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的 </a>
                                                     </td>
@@ -312,7 +312,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">2</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/02.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/02.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</a>
                                                     </td>
@@ -350,7 +350,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">3</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/03.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/03.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">大只再筆不人油畫主甚是活相面飛</a>
                                                     </td>
@@ -388,7 +388,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">4</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/04.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/04.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">期完那照角金直麼應式少說</a>
                                                     </td>
@@ -426,7 +426,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">5</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/05.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/05.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">大只再筆不人油畫主甚是活相面飛</a>
                                                     </td>
@@ -464,7 +464,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">6</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/06.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/06.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">過比你三觀不比想面發比望麼到發濟家飯年經產</a>
                                                     </td>
@@ -502,7 +502,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">7</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/07.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/07.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">小方題一部點口著點力對手不體的老汽</a>
                                                     </td>
@@ -540,7 +540,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">8</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/08.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/08.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">種親學從期完那照角金直麼應式少說認國、每面因現輕，</a>
                                                     </td>
@@ -578,7 +578,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">9</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/09.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/09.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的 </a>
                                                     </td>
@@ -616,7 +616,7 @@
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">10</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/10.jpg" alt=""></div></td>
+                                                    <td><div class="pic"><img src="../images/demo/10.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">明登行行不跑用面出水女一人配動麼死情策</a>
                                                     </td>
