--- a/Chris/data_new_update.htm
+++ b/Chris/data_new_update.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="../js/html5shiv.js"></script>
     <script src="../js/respond.min.js"></script>
@@ -13,7 +13,7 @@
     <!-- hyUI css -->
     <link rel="stylesheet" href="../css/supercms.css">
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="../images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="../vendor/highlight/github-gist.css">
     <!-- fancybox -->
@@ -299,63 +299,63 @@
                                                                 <!-- 上傳完，移除loading -->
                                                                 <div class="img-container">
                                                                     <!-- <div class="loading"></div> -->
-                                                                    <img src="images/demo/01.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/01.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item">
                                                                 <div class="img-container">
                                                                     <!-- <div class="loading"></div> -->
-                                                                    <img src="images/demo/02.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/02.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item">
                                                                 <div class="img-container">
                                                                     <div class="loading"></div>
-                                                                    <img src="images/demo/03.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/03.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item">
                                                                 <div class="img-container">
                                                                     <div class="loading"></div>
-                                                                    <img src="images/demo/04.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/04.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item">
                                                                 <div class="img-container">
                                                                     <div class="loading"></div>
-                                                                    <img src="images/demo/05.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/05.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item">
                                                                 <div class="img-container">
                                                                     <div class="loading"></div>
-                                                                    <img src="images/demo/06.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/06.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item">
                                                                 <div class="img-container">
                                                                     <div class="loading"></div>
-                                                                    <img src="images/demo/07.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/07.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item">
                                                                 <div class="img-container">
                                                                     <div class="loading"></div>
-                                                                    <img src="images/demo/08.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/08.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>xxxxxx.jpg</p>
                                                             </div>
                                                             <div class="item error">
                                                                 <a href="#" class="delete"><i class="i_close"></i></a>
                                                                 <div class="img-container">
-                                                                    <img src="images/demo/08.jpg" alt="" class="cover">
+                                                                    <img src="../images/demo/08.jpg" alt="" class="cover">
                                                                 </div>
                                                                 <p>檔案上傳錯誤</p>
                                                             </div>
@@ -366,7 +366,7 @@
                                                         <!-- item = 1 file -->
                                                         <div class="item">
                                                             <div class="pic">
-                                                                <img src="images/demo/01.jpg" alt="">
+                                                                <img src="../images/demo/01.jpg" alt="">
                                                             </div>
                                                             <div class="flex-form">
                                                                 <div class="file_title">圖片名稱.jpg </div>
@@ -386,7 +386,7 @@
                                                         <!-- item = 1 file -->
                                                         <div class="item">
                                                             <div class="pic">
-                                                                <img src="images/demo/02.jpg" alt="">
+                                                                <img src="../images/demo/02.jpg" alt="">
                                                             </div>
                                                             <div class="flex-form">
                                                                 <div class="file_title">圖片名稱.jpg </div>
@@ -406,7 +406,7 @@
                                                         <!-- item = 1 file -->
                                                         <div class="item">
                                                             <div class="pic">
-                                                                <img src="images/demo/03.jpg" alt="">
+                                                                <img src="../images/demo/03.jpg" alt="">
                                                             </div>
                                                             <div class="flex-form">
                                                                 <div class="file_title">圖片名稱.jpg </div>
@@ -433,7 +433,7 @@
                                                         <!-- item = 1 file -->
                                                         <div class="item">
                                                             <div class="pic">
-                                                                <img src="images/icon/icon_xls.svg" alt="">
+                                                                <img src="../images/icon/icon_xls.svg" alt="">
                                                             </div>
                                                             <div class="flex-form">
                                                                 <div class="file_title">附件檔案名稱.xls </div>
@@ -448,7 +448,7 @@
                                                         <!-- item = 1 file -->
                                                         <div class="item">
                                                             <div class="pic">
-                                                                <img src="images/icon/icon_pdf.svg" alt="">
+                                                                <img src="../images/icon/icon_pdf.svg" alt="">
                                                             </div>
                                                             <div class="flex-form">
                                                                 <div class="file_title">附件檔案名稱.pdf </div>
