--- a/Chris/catNodeAdd.htm
+++ b/Chris/catNodeAdd.htm
@@ -13,7 +13,7 @@
     <!-- hyUI css -->
     <link rel="stylesheet" href="../css/supercms.css">
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="../images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="../vendor/highlight/github-gist.css">
     <link rel="stylesheet" href="../vendor/fancybox/jquery.fancybox.min.css">
