--- a/Chris/fancybox_userlist.htm
+++ b/Chris/fancybox_userlist.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="../js/html5shiv.js"></script>
     <script src="../js/respond.min.js"></script>
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../css/supercms.css">
     <!-- <link rel="stylesheet" href="../css/animate.min.css"> -->
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="../images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="../vendor/highlight/github-gist.css">
     <!-- fancybox -->
