--- a/Chris/header.htm
+++ b/Chris/header.htm
@@ -7,14 +7,14 @@
             <!-- 提醒事項通知 -->
             <div class="item alert">
                 <a href="#">
-                    <img src="images/iot_icon/alert.svg" alt="">
+                    <img src="../images/iot_icon/alert.svg" alt="">
                 </a>
                 <span>100</span>
             </div>
             <!--  個人化panel -->
             <div class="item account dropdown">
                 <a href="#" class="dropdown-btn">
-                    <img src="images/man.svg" alt="">
+                    <img src="../images/man.svg" alt="">
                 </a>
                 <div class="dropdown-content">
                     <div class="info">
