--- a/Chris/login.htm
+++ b/Chris/login.htm
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../css/supercms.css">
     <!-- <link rel="stylesheet" href="../css/animate.min.css"> -->
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="../images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="../vendor/highlight/github-gist.css">
 </head>
@@ -23,12 +23,12 @@
     <div class="login_wrapper">
         <!-- 有需要再放圖 -->
         <div class="bg_img hidden">
-            <img src="images/demo/01.jpg" alt="">
+            <img src="../images/demo/01.jpg" alt="">
         </div>
         <div class="login">
             <h1>
                 <div class="pic">
-                    <img src="images/logo.png" alt="">
+                    <img src="../images/logo.png" alt="">
                 </div>
                 <span>W00CMS網站管理平台</span>
             </h1>
@@ -53,7 +53,7 @@
                         <input name="verifyCode" type="text" value="">
                         <label>請輸入驗證碼<abbr>*</abbr></label>
                         <div class="additional">
-                            <img src="images/captcha.gif" alt="">
+                            <img src="../images/captcha.gif" alt="">
                             <button type="button" class="btn btn_circle"><i class="i_reload"></i></button>
                         </div>
                     </div>
