--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_now_counter">
-                                            <div class="counter "data-count="137"></div>
+                                            <div class="counter "data-count="37"></div>
                                         </div>
                                         <div class="help">三日內新增資料數</div>
                                     </div>
@@ -80,7 +80,7 @@
                                         <div class="widget_now_user">
                                             <div class="counter "data-count="376"></div>
                                         </div>
-                                        <!--div class="help">時間以...為計算準</div-->
+                                        <div class="help">目前線上影片總數</div>
                                     </div>
                                 </div>
                             </div>
@@ -88,14 +88,14 @@
                         <div class="col">
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>推送失敗影片</h3>
+                                    <h3>待推送 / 推送失敗影片</h3>
                                 </div>
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_new_data">
                                             <div class="counter "data-count="20">11</div>
                                         </div>
-                                        <!--div class="help">時間以...為計算準</div-->
+                                        <div class="help">待推送Youtube / 推送失敗影片</div>
                                     </div>
                                 </div>
                             </div>
@@ -114,44 +114,40 @@
                                                 <tr>
                                                     <th>序列</th>
                                                     <th>標題</th>
+                                                    <th>上稿單位</th>
                                                     <th>瀏覽量</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a>
-                                                    </td>
-                                                    <td class="text-left">1,523</td>
+                                                    <td class="text-left">大更沒於正時節直只們來壓算有先，求化化看雨的</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">1,523</td>
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
-                                                    <td class="text-left">
-                                                        <a href="#">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</a>
-                                                    </td>
-                                                    <td class="text-left">823</td>
+                                                    <td class="text-left">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">823</td>
                                                 </tr>
                                                 <tr>
                                                     <td>3</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大只再筆不人油畫主甚是活相面飛</a>
-                                                    </td>
-                                                    <td class="text-left">253</td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">253</td>
                                                 </tr>
                                                 <tr>
                                                     <td>4</td>
-                                                    <td class="text-left">
-                                                        <a href="#">期完那照角金直麼應式少說</a>
-                                                    </td>
-                                                    <td class="text-left">102</td>
+                                                    <td class="text-left">期完那照角金直麼應式少說</td>
+                                                    <td class="text-left">台中市政府台中市政府台中市政府</td>
+                                                    <td class="text-right">102</td>
                                                 </tr>
                                                 <tr>
                                                     <td>5</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大只再筆不人油畫主甚是活相面飛</a>
-                                                    </td>
-                                                    <td class="text-left">50</td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府台中市政府台中市政府</td>
+                                                    <td class="text-right">50</td>
                                                 </tr>
                                                 <tr>
                                                     <td>6</td>
@@ -162,24 +158,21 @@
                                                 </tr>
                                                 <tr>
                                                     <td>7</td>
-                                                    <td class="text-left">
-                                                        <a href="#">期完那照角金直麼應式少說</a>
-                                                    </td>
-                                                    <td class="text-left">102</td>
+                                                    <td class="text-left">期完那照角金直麼應式少說</td>
+                                                    <td class="text-left">台中市政府社會局</td>
+                                                    <td class="text-right">102</td>
                                                 </tr>
                                                 <tr>
                                                     <td>8</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大只再筆不人油畫主甚是活相面飛</a>
-                                                    </td>
-                                                    <td class="text-left">50</td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">50</td>
                                                 </tr>
                                                 <tr>
                                                     <td>9</td>
-                                                    <td class="text-left">
-                                                        <a href="#">過比你三觀不比想面發比望麼到發濟家飯年經產</a>
-                                                    </td>
-                                                    <td class="text-left">15</td>
+                                                    <td class="text-left">過比你三觀不比想面發比望麼到發濟家飯年經產</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">15</td>
                                                 </tr>
                                             </tbody>
                                         </table>
