--- a/index_list.html
+++ b/index_list.html
@@ -95,7 +95,12 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>首頁：儀錶板</td>
+                        <td>登入頁</td>
+                        <td><a href="login.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>登入首頁：儀錶板</td>
                         <td><a href="index.htm" target="_blank"></a></td>
                     </tr>
                     <tr>
@@ -160,6 +165,13 @@
                                 <li>編輯目錄樹 <a href="catTreeEdit.htm" target="_blank"></a></li>
                                 <li>編輯目錄樹架構 <a href="catNodeEdit.htm" target="_blank"></a></li>
                                 <li>新增目錄樹節點 <a href="catNodeAdd.htm" target="_blank"></a></li>
+                                <li>編修目錄樹 <a href="catNodeEdit_blank.htm" target="_blank"></a></li>
+                            </ul>
+                            <p>彈出視窗(Lightbox)</p>
+                            <ul>
+                                <li>選擇主題單元 <a href="fancybox_ctUnitList.htm" target="_blank"></a></li>
+                                <li>選擇上稿帳號 <a href="fancybox_userlist.htm" target="_blank"></a></li>
+                                <li>選擇審稿帳號 <a href="fancybox_reviewerlist.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -173,6 +185,15 @@
                                 <li>新增/編修資料 <a href="data_new_update.htm" target="_blank"></a></li>
                                 <li>編修資料 <a href="data_new2.htm" target="_blank"></a></li>
                             </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>內容管理：資料審稿</td>
+                        <td>
+                            <ul>
+                                <li>審稿清單 <a href="review_list.htm" target="_blank"></a></li>
+                                <li>審稿編修 <a href="review_edit.htm" target="_blank"></a></li>
                         </td>
                     </tr>
                     <tr>
