--- a/login.htm
+++ b/login.htm
@@ -28,9 +28,9 @@
         <div class="login">
             <h1>
                 <div class="pic">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/W_logo.png" alt="">
                 </div>
-                <span>SuperCMS網站管理平台</span>
+                <span>W CMS Lite 網站管理平台</span>
             </h1>
             <div class="flex-form">
                 <div class="form_grp">
@@ -70,7 +70,7 @@
                     <button class="btn btn-primary">登入</button>
                 </div>
                 <div class="contact">
-                    <p>如有登入問題，請聯繫資訊科 王大明 分機123 <br />電子郵件：<a href="mailto:abc@gmail.com">abc@gmail.com</a></p>
+                    <p>如有登入問題，請聯繫系統管理員</p>
                 </div>
             </div>
         </div>
