--- a/review_list.htm
+++ b/review_list.htm
@@ -136,7 +136,7 @@
                                         <ul>
                                             <li class="active"><a href="#">全部</a></li>
                                             <li><a href="#">待初審</a></li>
-                                            <li><a href="#">待覆審</a></li>
+                                            <li><a href="#">待複審</a></li>
                                             <li><a href="#">審核通過</a></li>
                                             <li><a href="#">審核不通過</a></li>
                                         </ul>
@@ -147,26 +147,30 @@
                                         <div class="dropdown">
                                             <button class="btn dropdown-btn">
                                                 <i class="i_setting"></i>批次處理</button>
-                                            <div class="dropdown-content">
-                                                <ul>
-                                                    <li>
-                                                        <button class="btn">
-                                                            <i class="i_check"></i>審核通過</button>
-                                                    </li>
-                                                    <li>
-                                                        <button class="btn">
-                                                            <i class="i_check"></i>審核不通過</button>
-                                                    </li>
-                                                    <li>
-                                                        <button class="btn">
-                                                            <i class="i_check"></i>下架</button>
-                                                    </li>
-                                                    <li>
-                                                        <button class="btn btn-delete">
-                                                            <i class="i_trash"></i>刪除</button>
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                                <div class="dropdown-content">
+                                                    <ul>
+                                                        <li>
+                                                            <button class="btn" onclick="batch('A')">
+                                                                <i class="i_check"></i>審核通過</button>
+                                                        </li>
+                                                        <li>
+                                                            <button class="btn" onclick="batch('R')">
+                                                                <i class="i_check"></i>審核不通過</button>
+                                                        </li>
+                                                        <li>
+                                                            <button class="btn" onclick="batch('S')">
+                                                                <i class="i_top"></i>置頂</button>
+                                                        </li>
+                                                        <li>
+                                                            <button class="btn" onclick="batch('N')">
+                                                                <i class="i_trash"></i>下架 </button>
+                                                        </li>                                                    
+                                                        <li>
+                                                            <button class="btn btn-delete" onclick="batch('D')">
+                                                                <i class="i_trash"></i>刪除 </button>
+                                                        </li>
+                                                    </ul>
+                                                </div>
                                         </div>
                                     </div>
                                     
@@ -194,8 +198,10 @@
                                                 <tr>
                                                     <th><input type="checkbox"></th>
                                                     <th>序號 </th>
+                                                    <th>狀態</th>
+                                                    <th>轉檔進度</th>
                                                     <th>上稿單元</th>
-                                                    <th>文章圖片</th>
+                                                    <!--th>文章圖片</th-->
                                                     <th class="main_data">
                                                         <a href="#">標題<i class="i_sort"></i>
                                                         </a>
@@ -217,10 +223,13 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">1</td>
+                                                    <td>審稿中 - 初審</td>
+                                                    <!--td>審稿中 - 複審</td-->
+                                                    <td>成功:3E0ozg1hHlI</td>
                                                     <td>全球資訊入口網 / 消息公告 / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/01.jpg" alt=""></div></td>
+                                                    <!--td><div class="pic"><img src="images/demo/01.jpg" alt=""></div></td-->
                                                     <td class="main_data">
-                                                        <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的 </a>
+                                                        <a href="review_edit.htm">大更沒於正時節直只們來壓算有先，求化化看雨的 </a>
                                                     </td>
                                                     <td><time>2019/10/16</time></td>
                                                     <td><time>2019/12/16</time></td>
@@ -251,8 +260,11 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">2</td>
+                                                    <!--td>審稿中 - 初審</td-->
+                                                    <td>審稿中 - 複審</td>
+                                                    <td>成功:3E0ozg1hHlI</td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/02.jpg" alt=""></div></td>
+                                                    <!--td><div class="pic"><img src="images/demo/02.jpg" alt=""></div></td-->
                                                     <td class="main_data">
                                                         <a href="#">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</a>
                                                     </td>
@@ -285,8 +297,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">3</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/03.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">大只再筆不人油畫主甚是活相面飛</a>
                                                     </td>
@@ -319,8 +332,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">4</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/04.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">期完那照角金直麼應式少說</a>
                                                     </td>
@@ -353,8 +367,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">5</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/05.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">大只再筆不人油畫主甚是活相面飛</a>
                                                     </td>
@@ -387,8 +402,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">6</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/06.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">過比你三觀不比想面發比望麼到發濟家飯年經產</a>
                                                     </td>
@@ -421,8 +437,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">7</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/07.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">小方題一部點口著點力對手不體的老汽</a>
                                                     </td>
@@ -455,8 +472,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">8</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/08.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">種親學從期完那照角金直麼應式少說認國、每面因現輕，</a>
                                                     </td>
@@ -489,8 +507,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">9</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/09.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的 </a>
                                                     </td>
@@ -523,8 +542,9 @@
                                                 <tr>
                                                     <td class="hasInput"><input type="checkbox"></td>
                                                     <td class="num">10</td>
+                                                    <td>審稿中</td>
+                                                    <td></td>
                                                     <td>上稿樹 / ... / 最新消息</td>
-                                                    <td><div class="pic"><img src="images/demo/10.jpg" alt=""></div></td>
                                                     <td class="main_data">
                                                         <a href="#">明登行行不跑用面出水女一人配動麼死情策</a>
                                                     </td>
