--- a/login.htm
+++ b/login.htm
@@ -63,7 +63,7 @@
                         <div class="check_grp form_inline">
                             <label><input name="" type="checkbox" value=""><span>記住我</span></label>
                         </div>
-                        <a href="#">忘記密碼</a>
+                        <!--a href="#">忘記密碼</a-->
                     </div>
                 </div>
                 <div class="btn_grp">
