--- a/aside.htm
+++ b/aside.htm
@@ -89,10 +89,10 @@
                 <img src="images/iot_icon/setting.svg" alt="">
                 <span>系統開發</span>
             </a>
-            <ul>
-                <li><a href="codeList.htm"><span>代碼維護</span></a></li>
-            </ul>
-        </li>
+                <ul>
+                    <li><a href="codeList.htm"><span>代碼維護</span></a></li>
+                </ul>
+            </li>
 
             <li><a href="#">
                     <img src="images/iot_icon/admingrp2.svg" alt="">
@@ -116,12 +116,12 @@
                     <li><a href="card_website.htm"><span>版型管理</span></a></li>
                 </ul>
             </li>
-            <li>
+            <li class="li_hasChild active open">
                 <a href="#">
                     <img src="images/iot_icon/document.svg" alt="">
                     <span>內容管理</span>
                 </a>
-                <ul>
+                <ul style="display: block;">
                     <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
                     <li><a href="data_list.htm"><span>單元上稿</span></a></li>
                     <li><a href="data_list.htm"><span>資料審稿</span></a></li>
