--- a/aside.htm
+++ b/aside.htm
@@ -20,7 +20,7 @@
         </div>
     </div-->
     <!-- menu -->
-    <nav style="height:100%;padding-bottom:0;">
+    <nav style="height:100%;padding-bottom:0;" class="menu">
         <!-- level1 -->
         <ul>
             <li>
