--- a/aside.htm
+++ b/aside.htm
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="css/menu.css">
-
+<aside>
     <h1>
         <a href="index.htm">
             <img src="images/W_logo.png" alt=""><span>W CMS Lite<br>網站管理平台</span>
@@ -139,6 +139,6 @@
     <!-- 次層抽屜選單 -->
     <!-- copyright -->
     <div class="copyright">Copyright 2021 © Hyweb </div>
-
+</aside>
 <!-- customize -->
 <script src="js/customize.js"></script>
