--- a/aside.htm
+++ b/aside.htm
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="css/menu.css">
 <aside>
     <h1>
         <a href="index.htm">
@@ -6,7 +5,7 @@
         </a>
     </h1>
     <!-- menu -->
-    <nav style="height:100%;padding-bottom:0;" class="menu">
+    <nav style="height:100%;padding-bottom:0;">
         <!-- level1 -->
         <ul>
             <li>
