--- a/aside.htm
+++ b/aside.htm
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="css/menu.css">
+<script src="js/menu.js"></script>
 <aside>
     <h1>
         <a href="index.htm">
@@ -5,7 +7,7 @@
         </a>
     </h1>
     <!-- menu -->
-    <nav style="height:100%;padding-bottom:0;">
+    <nav class="menu" style="height:100%;padding-bottom:0;">
         <!-- level1 -->
         <ul>
             <li>
