--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,84 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex-12">
+                    <div class="flex-6-6">
+                        <div class="col ">
+                            <div class="content_block">
+                                <div class="_head">
+                                    <h3>最新公告</h3>
+                                </div>
+                                <div class="_content">
+                                    <div class="table_wrapper">
+                                        <table class="table_hover">
+                                            <thead>
+                                                <tr>
+                                                    <th>序列</th>
+                                                    <th>標題</th>
+                                                    <th>上稿單位</th>
+                                                    <th>發布日期</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td class="text-left">大更沒於正時節直只們來壓算有先，求化化看雨的</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">1,523</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td class="text-left">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">823</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>3</td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">253</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>4</td>
+                                                    <td class="text-left">期完那照角金直麼應式少說</td>
+                                                    <td class="text-left">台中市政府台中市政府台中市政府</td>
+                                                    <td class="text-right">102</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>5</td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府台中市政府台中市政府</td>
+                                                    <td class="text-right">50</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>6</td>
+                                                    <td class="text-left">過比你三觀不比想面發比望麼到發濟家飯年經產</td>
+                                                    <td class="text-left">台中市政府台中市政府台中市政府</td>
+                                                    <td class="text-right">15</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>7</td>
+                                                    <td class="text-left">期完那照角金直麼應式少說</td>
+                                                    <td class="text-left">台中市政府社會局</td>
+                                                    <td class="text-right">102</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>8</td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">50</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>9</td>
+                                                    <td class="text-left">過比你三觀不比想面發比望麼到發濟家飯年經產</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">15</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col ">
                             <div class="content_block">
                                 <div class="_head">
