--- a/aside.htm
+++ b/aside.htm
@@ -5,7 +5,7 @@
         </a>
     </h1>
     <!-- menu -->
-    <nav class="menu" style="height:100%;padding-bottom:0;">
+    <nav style="height:100%;padding-bottom:0;">
         <!-- level1 -->
         <ul>
             <li>
@@ -46,12 +46,12 @@
                     <li><a href="card_website.htm"><span>版型管理</span></a></li>
                 </ul>
             </li>
-            <li class="li_hasChild active open">
+            <li class="li_hasChild">
                 <a href="#">
                     <img src="images/iot_icon/document.svg" alt="">
                     <span>內容管理</span>
                 </a>
-                <ul style="display:block;">
+                <ul>
                     <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
                     <li><a href="data_list.htm"><span>單元上稿</span></a></li>
                     <li><a href="data_list.htm"><span>資料審稿</span></a></li>
