--- a/index_list.html
+++ b/index_list.html
@@ -185,6 +185,7 @@
                                 <li>新增/編修資料 <a href="data_new_update.htm" target="_blank"></a></li>
                                 <li>編修資料 <a href="data_new2.htm" target="_blank"></a></li>
                             </ul>
+                            <p>Html editor <a href="data_new_htmleditor.htm" target="_blank"></a></p>
                         </td>
                     </tr>
                     <tr>
